--- a/src/app/component/garcia/routed-admin-editGarcia/Garciarouted-admin-edit.html
+++ b/src/app/component/garcia/routed-admin-editGarcia/Garciarouted-admin-edit.html
@@ -96,8 +96,8 @@
           <!-- Publicado -->
           <div class="mb-4">
             <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="publicado" formControlName="publicado" />
-              <label class="form-check-label" for="publicado">
+              <input type="checkbox" class="form-check-input" id="publico" formControlName="publico" />
+              <label class="form-check-label" for="publico">
                 Publicar objetivo (visible para usuarios)
               </label>
             </div>
